--- a/app/home.html
+++ b/app/home.html
@@ -64,6 +64,7 @@
 	</div>
 		
 	<div class="pane_bottom">
+		<button type="button" class="button_menu_bottom" onclick="openResumeProject()"><span class="text_button_menu_bottom">Resume Project</span></button>
 		<button type="button" class="button_menu_bottom" onclick="registerRemoteHost()"> <span class="text_button_menu_bottom">Register host</span></button>
 		<button type="button" class="button_menu_bottom" onclick="openFileBrowser()"><span class="text_button_menu_bottom">File Browser</span></button>
 		<button type="button" class="button_menu_bottom" onclick="openKDB()"> <span class="text_button_menu_bottom">Knowledge DB</span></button>
