--- a/app/resumeproject.html
+++ b/app/resumeproject.html
@@ -1,1 +1,37 @@
-hoge
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport"
+			content="width=device-width,initial-scale=1,user-scalable=yes">
+		<title>Resume Project</title>
+		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="css/password_input.css">
+		<link rel="stylesheet" href="css/button.css">
+		<link rel="stylesheet" href="css/filebrowser.css">
+		<script src="socket.io/socket.io.js"></script>
+		<script type="text/javascript" src="js/RemoteFTP.js"></script>
+		<script type="text/javascript" src="js/password_input.js"></script>
+		<script type="text/javascript" src="js/resumeproject.js"></script>
+	</head>
+	<body onload="bootstrap()">
+	<div class="header">
+		<div class="title"><span class="text_title">Resume Project</span></div>
+	</div>
+	
+	<div class="popup_background" id="popup_background">
+		<div class="hostwrap">
+			<div class="hostbrowser" id="regiterlist">
+			</div>
+			<div id="confirm_button">
+				<button class="button_open" id="password_input_button_ok" type="button">
+					<span class="text_button_action">OK</span>
+				</button>
+				<button class="button_cancel" id="password_input_button_cancel" type="button">
+					<span class="text_button_action">Cancel</span>
+				</button>
+			</div>
+		</div>
+	</div>
+	</body>
+</html>
