add cases to info page

--- a/app/editor.html
+++ b/app/editor.html
@@ -178,6 +178,15 @@
 					</div>
 				</div>
 
+
+				<div class="row">
+					<div class="info_title">
+						Case
+					</div>
+					<div class="info_text" id="info_case">
+					</div>
+				</div>
+				
 				<!--div class="row">
 					<div class="info_title">
 						Workflow File
@@ -186,14 +195,6 @@
 					</div>
 				</div>
 
-
-				<div class="row">
-					<div class="info_title">
-						Case File
-					</div>
-					<div class="info_text" id="info_case">
-					</div>
-				</div>
 
 				<div class="row">
 					<div class="info_title">
