--- a/app/editor.html
+++ b/app/editor.html
@@ -24,6 +24,7 @@
 		<div class="execute_button_area">
 			<button class="button_execute" id="button_execute_" title='Run (CTRL+R)'></button>
 			<button class="button_dryrun" id="button_dryrun" title='DryRun'>DryRun</button>
+			<button class="button_clean" id="button_clean" title='Clean'>Clean</button>
 		</div>
 		<div class="change_mode_area_container">
 			<div class="change_mode_area">
