fix remotehost page

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -31,11 +31,10 @@
 					<div class="text_label">Type</div>
 					<input id="input_type" class="input_info"  placeholder="machineid" required ></input>
 				</div>
-				<div class="grp_floatleft">
+				<div class="grp_floatleft" style="width:300px">
 					<div class="text_label">Label</div>
 					<input id="input_label" class="input_info" placeholder="NAME" required ></input>
 				</div>
-				<br>
 				<div class="grp_floatleft">
 					<div class="text_label">HOST</div>
 					<input id="input_host" class="input_info" placeholder="localhost or name.host.jp.." required ></input>
@@ -44,7 +43,6 @@
 					<div class="text_label">Path</div>
 					<input id="input_path" class="input_info" placeholder="/home/username/" required ></input>
 				</div>
-
 				<div id="idkey" class="grp_floatclear">
 					<div class="grp_floatleft">
 						<div class="text_label">ID</div>
