add resume list to resume project

--- a/app/resumeproject.html
+++ b/app/resumeproject.html
@@ -20,7 +20,7 @@
 		<div class="title"><span class="text_title">Resume Project</span></div>
 	</div>
 
-	<div class="hostbrowser" id="regiterlist">
+	<div class="hostbrowser" id="projectlist">
 	</div>
 		
 	<div class="popup_background" id="popup_background">
