add confirm dialog

--- a/app/editor.html
+++ b/app/editor.html
@@ -72,6 +72,17 @@
 			</div>
 		</div>
 	</div>
+	<div id="ok_cancel_dialog" class="confirm_dialog">
+		<div class="confirm_message">
+			<p id="ok_cancel_message"></p>
+			<div class="open_warning_button">
+				<button class="confirm_save_button" id="button_clean_ok" type="button">
+					<span class="open_warning_button_text">OK</span></button>
+				<button class="confirm_cancel_button" id="button_clean_cancel" type="button">
+					<span class="open_warning_button_text">Cancel</span></button>
+			</div>
+		</div>
+	</div>
 
 	
 	<!--------------------------- menus / browser --------------------------------->
