readonly when execute workflow

--- a/app/editor.html
+++ b/app/editor.html
@@ -281,6 +281,7 @@
 				<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
 			</div>
 		</div>
+		<div id="node_area_disable" class="node_area_disable"></div>
 	</span>
 	<div class="nodePropertyTab" id="nodePropertyTab">
 		<!--div id="nodeList" class="nodeList"></div-->
