change to editable when execute workflow add running text to node editor

--- a/app/editor.html
+++ b/app/editor.html
@@ -281,7 +281,11 @@
 				<svg id="nodecanvas" class="NodeCanvas noneselect"></svg>
 			</div>
 		</div>
-		<div id="node_area_disable" class="node_area_disable"></div>
+		<div id="node_area_disable" class="node_area_disable">
+			<div class="node_executing">
+				Running...
+			</div>
+		</div>
 	</span>
 	<div class="nodePropertyTab" id="nodePropertyTab">
 		<!--div id="nodeList" class="nodeList"></div-->
