add tag help page

--- a/app/editor.html
+++ b/app/editor.html
@@ -184,6 +184,7 @@
 				<div class="row">
 					<div class="info_title">
 						Description
+						<div class="validtags" id="validtags">show valid tags</div>
 					</div>
 					<div class="info_text" id="info_description">
 						<!--project description-->
@@ -198,47 +199,6 @@
 					<div class="info_text" id="info_case">
 					</div>
 				</div>
-				
-				<!--div class="row">
-					<div class="info_title">
-						Workflow File
-					</div>
-					<div class="info_text" id="info_workflow">
-					</div>
-				</div>
-
-
-				<div class="row">
-					<div class="info_title">
-						KDB URL
-					</div>
-					<div class="info_text" id="info_kdb_url">
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="info_title">
-						KDB Modified
-					</div>
-					<div class="info_text" id="info_kdb_change">
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="info_title">
-						KDB Detail
-					</div>
-					<div class="info_text" id="info_kdb_detail_of_change">
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="info_title">
-						Log File
-					</div>
-					<div class="info_text" id="info_log">
-					</div>
-				</div-->
 			</div>
 		</div>
 	</span>
